force-app/main/default/objects/Lead/fields/Amount_with_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_with_Currency__c</fullName>
    <formula>Amount__c</formula>
    <label>Amount with Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>