force-app/main/default/objects/Lead/fields/Approx_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Approx_Revenue__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Approx Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>