force-app/main/default/objects/Lead/fields/skip_1st_approval__c.field-meta.xml
<CustomField>
    <fullName>skip_1st_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>by checking this box, when a lead is submitted for approval, it will skip the 1st step</description>
    <label>skip 1st approval?</label>
    <type>Checkbox</type>
</CustomField>