force-app/main/default/objects/Lead/recordTypes/PRM.recordType-meta.xml
<RecordType>
    <fullName>PRM</fullName>
    <active>true</active>
    <businessProcess>Partner Lead Process</businessProcess>
    <description>Record type related to PRM</description>
    <label>PRM</label>
</RecordType>